# mono-example

./: CONTRIBUTING.md  README.md  convergence-notes.md  pyproject.toml
.github-archive/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github-archive/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github-archive/workflows/: auto-strands-review.yml  npm-publish-on-release.yml  pr-and-push.yml  pr-title.yml  py-check.yml  security-audit.yml  strands-command.yml  test-package-pack.yml  ts-check.yml  ts-test.yml
.github/workflows/: mcp-ci.yml  python-ci.yml  python-publish.yml  site-build.yml  typescript-ci.yml  typescript-publish.yml
docs/: DIVERGENCES.md
site/: .gitignore  README.md
site/.github-archive/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
site/.github-archive/workflows/: auto-strands-review.yml  ci.yml  deploy-github-pages.yml  docs-preview.yml  strands-command.yml
site/src/components/: AutoSyncTabs.astro  LanguageToggle.astro  Redirect404.astro
site/src/components/overrides/: MarkdownContent.astro
site/src/content/docs/community/: community-packages.mdx  get-featured.mdx
site/src/content/docs/user-guide/concepts/agents/: hooks.ts  hooks_imports.ts
site/src/content/docs/user-guide/concepts/model-providers/: amazon-bedrock.ts  amazon-bedrock_imports.ts  anthropic.ts  anthropic_imports.ts  google.ts  google_imports.ts  openai.ts  openai_imports.ts  vercel.ts
site/src/content/docs/user-guide/concepts/plugins/: context-offloader.ts  context-offloader_imports.ts
site/src/layouts/: LandingLayout.astro
site/src/util/: integration-content.ts  redirect.ts
site/test/: redirect.test.ts
strandly/scripts/: generate_types.py
strands-mcp/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
strands-mcp/.github-archive/: dependabot.yml
strands-mcp/.github-archive/workflows/: pr-and-push.yml  pypi-publish-on-release.yml  test-lint.yml
strands-mcp/src/strands_mcp_server/: __main__.py  config.py  server.py
strands-mcp/src/strands_mcp_server/utils/: cache.py  doc_fetcher.py  indexer.py  text_processor.py
strands-mcp/tests/: conftest.py  test_server.py  test_text_processor.py
strands-mcp/tests_integ/: conftest.py  test_fetch_doc.py  test_parse_pipeline.py
strands-py/: .codecov.yml  README.md  pyproject.toml
strands-py-wasm/: README.md
strands-py/.github-archive/workflows/: issue-responder.yml  strands-command.yml  test-lint.yml
strands-py/src/strands/models/: bedrock.py
strands-py/tests/strands/models/: test_bedrock.py
strands-ts/: CHANGELOG.md  eslint.config.js
strands-ts/src/: errors.ts
strands-ts/src/agent/: printer.ts
strands-ts/src/agent/__tests__/: printer.test.ts
strands-ts/src/multiagent/__tests__/: nodes.test.ts
strands-ts/src/types/: messages.ts
strands-ts/src/types/__tests__/: messages.test.ts
strands-ts/test/integ/: interrupt.test.ts
strands-wasm/: README.md  build.js  entry.ts  package.json
strands-wasm/docs/: feature-development.md
strands-wasm/patches/: getChunkedStream.js
wit/: agent.wit  mcp.wit  messages.wit  models.wit  multiagent.wit  retry.wit  sessions.wit  streaming.wit  tools.wit
(+1 files in other folders)
